unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/simplesms__Textey_User_Preferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Blackthorn Messaging User Preferences</label>
</CustomObject>