unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Consent_Confirmation_Shown__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Consent_Confirmation_Shown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Confirmation Shown</label>
    <type>Checkbox</type>
</CustomField>