unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Conversation_Filter_Display__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Filter_Display__c</fullName>
    <label>Conversation Filter Display</label>
    <length>80</length>
    <type>Text</type>
</CustomField>