unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Conversation_Filter_Id__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Filter_Id__c</fullName>
    <label>Conversation Filter Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>