unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Conversation_Filter_Number__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Filter_Number__c</fullName>
    <label>Conversation Filter Number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>