unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Conversation_Filter_Status__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Filter_Status__c</fullName>
    <label>Conversation Filter Status(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>