unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Conversation_Hide_Old_Indication__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation_Hide_Old_Indication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversation Hide Old Indication</label>
    <type>Checkbox</type>
</CustomField>