unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Default_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Default_Phone_Type__c</fullName>
    <label>Default Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>