unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Inbox_Lazy_Load_Limit__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Inbox_Lazy_Load_Limit__c</fullName>
    <description>Limit of loading messages for inbox chat panel.</description>
    <label>Inbox Lazy Load Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>