unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Inbox_Message_Limit__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Inbox_Message_Limit__c</fullName>
    <description>Limit of messages to prepare conversation list.</description>
    <label>Inbox Message Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>