unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Inbox_Show_All_Messages__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Inbox_Show_All_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field will be used to check All Messages status and on the basis of this showing all/my message in the inbox component!</description>
    <label>Inbox Show All Messages</label>
    <type>Checkbox</type>
</CustomField>