unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Message_Limit__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Message_Limit__c</fullName>
    <description>Limit of messages showing in the list over record detail page.</description>
    <label>Message Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>