unpackaged/main/default/objects/simplesms__Textey_User_Preferences__c/fields/simplesms__Show_All_Messages__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Show_All_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show All Messages</label>
    <type>Checkbox</type>
</CustomField>